--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -135,6 +135,17 @@ nav ul a
     height: 100%
     display: flex
 
+nav #contact
+    text-decoration: none
+    color: #ececec
+    font-family: 'Noto Sans KR', sans-serif
+    font-size: 20px
+    font-weight: 400
+    letter-spacing: 1px
+    height: 100%
+    display: flex
+    margin: 5px 20px
+
 nav a:hover 
     background-color: #6b6b6b
     color: #FFCFA8
@@ -175,7 +186,7 @@ nav a:hover
     /* mobile */
     $title-width-m: 85vw
     width: $title-width-m
-    height: $title-width-m / 1.83377253621 //2.24860210493 -m3 //2.7574371535 -m2 //3.2177827799662352279122115925718 -m
+    height: calc($title-width-m / 1.8337725362100001) //2.24860210493 -m3 //2.7574371535 -m2 //3.2177827799662352279122115925718 -m
     background-size: cover
     background-image: url("../images/title-outlines-m4-redline.svg")
     // top: -10vh
@@ -214,14 +225,14 @@ nav a:hover
 .slogan-box1 h3 
     text-align: center
     line-height: 60px
-    font-weight: 400
+    font-weight: 500
     position: relative
     max-width: 860px
     /* mobile */
     padding: 40px 20px
     margin: 0
     border: none
-    font-size: 18px
+    font-size: 22px
 
 .slogan-box1 span 
     font-weight: 600
@@ -342,10 +353,10 @@ nav a:hover
     font-size: 24px
 
 
-// .shadow 
-	// -webkit-box-shadow: 0 8px 6px -6px black
-	//    -moz-box-shadow: 0 8px 6px -6px black
-	//         box-shadow: 0 8px 6px -6px black
+/* .shadow 
+    -webkit-box-shadow: 0 8px 6px -6px black
+    -moz-box-shadow: 0 8px 6px -6px black
+    box-shadow: 0 8px 6px -6px black
  
 #glendora 
     top: 20.9%
@@ -488,7 +499,7 @@ nav a:hover
     box-shadow: none
 
 /* mobile */
-@keyframes side-scroll 
+/* @keyframes side-scroll 
     // 0%, 20% {background-position: 0 30%}
     // 23% {background-position: 44% 30%}
     // 24% {background-position: 36% 30%}
@@ -558,6 +569,19 @@ nav a:hover
 .column .button
     margin-bottom: 0
 
+#quote-box
+    display: flex 
+    flex-direction: row
+    line-height: 30px
+
+#quote-name
+    margin-top: 0px
+    font-weight: 600
+
+#quote-box span:last-of-type
+    align-self: flex-end
+    line-height: 0px
+
 .committed h3 
     font-size: 30px
     font-weight: 600
@@ -570,10 +594,19 @@ nav a:hover
     margin: 0 15px
     font-size: 20px
 
+.committed h4
+    font-weight: 400
+    text-align: center
+    margin-bottom: 10px
+
 .committed span 
     font-size: 46px
     /* mobile */
-    font-size: 30px
+    font-size: 40px
+    margin: 0 10px
+
+.committed p 
+    margin: 0 10px
 
 
 .section-collage 
@@ -677,6 +710,10 @@ nav a:hover
     flex-wrap: wrap
     // padding: 20px 0
     background-color: #f0f0f0
+    grid-column-gap: 40px
+    justify-content: center
+    align-items: start
+    
     
 #classesPg-section-grid h1
     text-align: center
@@ -684,16 +721,23 @@ nav a:hover
     // background-color: #414141
     color: #414141 //#FFFFFF //#FFC99D
     width: 100%
-    padding: 10px 20px
-    padding-top: 28px
+    padding: 20px 20px
+    // padding-top: 28px
     font-size: 32px
+    letter-spacing: 3px
+    font-weight: 600
 
 .class-card-container
     display: flex
     flex-wrap: wrap
-    border-bottom: 6px solid #A60000
+    // border-bottom: 6px solid #A60000
+    padding-bottom: 30px
+    flex-basis: 450px
+    flex-grow: 1
+    // max-width: 600px
+    // min-width: 350px
 
-.class-card
+.card-item
     // min-width: 340px
     // max-width: 540px
     flex-basis: 500px
@@ -701,37 +745,74 @@ nav a:hover
     padding: 0 20px
     color: #484848
     
-.class-card p
+p.card-item
     line-height: 1.5em
     // font-weight: 300
     font-size: 16px
     font-family: 'Noto Sans KR', sans-serif
+    margin: 20px 0
+    margin-bottom: 0
 
 img.card-pic
     max-width: 100%
-    border-radius: 10px
-    margin: 20px 0
-    display: block
+    // border-radius: 10px
+    // -webkit-border-radius: 10px
+    // -moz-border-radius: 10px
+    // margin: 20px 20px
+    // margin-bottom: 0
+    padding: 0
+    // display: block
 
 img.card-icon
     width: 40px
     margin-right: 20px
 
-.card-title-container
-    display: flex
+// .card-title-container
+//     display: flex
 
-.class-card ul 
+ul.card-item
     font-family: 'Montserrat', 'Comic Sans', sans-serif
     // font-family: 'Comic Sans', cursive
     font-size: 20px
     font-weight:  500
     color: #347E99 //#3D93B3  //#006464
     list-style-image: url('../images/bone-icon.png')
-    padding-left: 30px
+    padding-left: 40px
+    margin: 20px 0
+    margin-bottom: 0
 
-.class-card li
-    line-height: 1.25em
-    margin: 10px 0
+.card-item li
+    // line-height: 1.25em
+    // margin: 10px 0
+    margin-top: 5px
+    // text-indent: -20px
+    // padding-left: 20px
+
+a.moreBtn
+    background-color: #d63737
+    border-radius: 0px 0px 14px 14px
+    color: #fff
+    text-decoration: none
+    padding: 10px 30px
+    width: 100%
+    display: block
+    text-align: center
+    font-size: 18px
+    margin-top: 20px
+    cursor: pointer
+
+a.moreBtn:hover 
+    background-color: #727272
+
+a.lessInfo 
+    display: none
+
+p.longDescription 
+    display: none
+
+#classesPg-section-grid h3.comingSoon 
+    color: #c51b1b
+    font-family: 'Noto Sans KR', sans-serif
 
 #classesPg-section-grid h3
     font-size: 26px
@@ -739,7 +820,8 @@ img.card-icon
     // font-family: 'Krub', sans-serif
     font-family: 'Dosis', sans-serif
     font-weight:  800
-    margin: 18px 0
+    margin: 20px 0
+    margin-bottom: 0
 
 .alert
     display: flex
@@ -747,7 +829,8 @@ img.card-icon
     background-color: #ff8b8b //ff4848 //e54141
     border-radius: 10px
     padding: 16px
-    margin: 20px 0
+    margin: 20px 20px
+    margin-bottom: 0
 
 .alert img
     // height: 50%
@@ -762,8 +845,222 @@ img.card-icon
 .yellow
     background-color: #ffc895 //ffb066
 
+.blue
+    background-color: #b8d9ff
+    background-color: #5e9fe9
+
 // .class-card:nth-child(4n), .class-card:nth-child(4n+1)
 //     background-color: #f4f4f4
+
+img#ears
+    margin-top: -28px
+
+
+
+// // ***************************** About page *****************************
+
+#aboutPg-section-main
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    align-items: flex-end
+    justify-content: center
+    background-color: #f0f0f0
+    color: #8B1616
+    margin-top: 60px
+    font-family: "Noto Sans KR", sans-serif
+    text-align: center
+    padding: 0 3%
+    width: 100%
+
+.aboutPg-card
+    max-width: 450px
+    flex: 1 1 400px
+    margin: 10px
+    padding-top: 20px
+
+.aboutPg-card.bigCard
+    order: -1
+
+.aboutPg-card:first-of-type
+    order: -2
+    align-self: flex-start
+    // width: 100%
+    flex: 0 0 100%
+    max-width: 900px
+
+#bioCard
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    max-width: 100%
+    // flex: 1 1 800px
+    flex: 0 0 100%
+    justify-content: center
+
+#bioImage
+    max-width: 450px
+    margin: 10px
+
+#bioDescription
+    max-width: 450px
+    margin: 10px
+    margin-top: 40px
+    // align-self: center
+    text-align: left
+
+#aboutPg-section-main h1
+    font-family: "Montserrat", sans-serif
+    font-size: 34px
+    text-align: center
+    padding: 15px 0
+    // width: 90%
+
+#aboutPg-section-main img
+    width: 100%
+    margin-top: 35px
+    margin-bottom: 5px
+    
+#aboutPg-section-main h5
+    font-family: "Montserrat", sans-serif
+    font-size: 20px
+    margin: 0
+    // width: 90%
+    
+#aboutPg-section-main h6
+    font-family: "Montserrat", sans-serif
+    font-size: 16px
+    margin: 10px 0
+    margin-top: 0
+    font-weight: 400
+    // width: 90%
+
+#aboutPg-section-main p 
+    // width: 90%
+
+#aboutPg-testimonials
+    justify-content: center
+    background-color: #f0f0f0
+    color: #8B1616
+    text-align: center
+    padding: 0 3%
+    padding-top: 60px
+    padding-bottom: 60px
+    width: 100%
+
+#aboutPg-testimonials h1
+    font-family: "Montserrat", sans-serif
+    font-size: 34px
+    padding: 20px
+
+.testimonial
+    width: 90%
+    margin: 10px auto
+    // background-color: #dddddd
+    // background-color: #ffffff
+    background-color: #963838
+    // color: #4e4e4e
+    color: #eeeeee
+    padding: 10px 30px
+    border-radius: 10px
+    
+.testimonial p
+    font-family: "Dosis", sans-serif
+    margin-bottom: 6px
+
+.quoteName
+    font-size: 18px
+    margin-top: 0px
+    text-align: right
+    color: #cccccc
+
+
+// // ***************************** Schedules page *****************************
+
+#schedPg-section-main
+    background-color: #f0f0f0
+    // color: #171717
+    color: #8B1616
+    margin-top: 60px
+    text-align: center
+    padding: 0 3%
+    padding-bottom: 60px
+    width: 100%
+
+#schedPg-section-main h1
+    font-size: 34px
+    text-align: center
+    padding: 4px 0
+    padding-top: 40px
+
+#schedPg-section-main h1, #schedPg-section-main span
+    font-family: "Montserrat", sans-serif
+
+#schedPg-section-main span
+    font-size: 20px
+
+#monthTabs
+    margin: auto
+
+#monthTabs button
+    font-family: "Krub", sans-serif
+    background-color: #8d1818
+    color: #fff
+    border: none
+    border-radius: 10px
+    padding: 10px 20px
+    font-size: 24px
+    font-weight: 700
+    margin: 20px
+    cursor: pointer
+    
+#monthTabs button:hover
+    background-color: #7c7c7c
+
+#monthTabs button:disabled 
+    background-color: #7c7c7c
+
+.noClass
+    font-size: 0.75em
+    font-weight: 400
+
+#schedSep
+    display: none
+    font-family: "Noto Sans KR", sans-serif
+
+.schedContainer
+    display: grid
+    grid-template-columns: 1fr
+    text-align: center
+
+.item
+    padding: 30px
+    line-height: 1.4em
+
+.schedContainer h4
+    font-size: 18px
+    margin: 0px
+    margin-bottom: 4px
+    line-height: 1.4em
+
+.itemInfo a
+    background-color: #A60000 //#B82020
+    padding: 8px
+    border-radius: 24px
+    color: #fff //#FFC99D
+    font-size: 14px
+    font-weight: 700
+    letter-spacing: 3px
+    text-decoration: none
+    width: 318px
+    text-align: center
+    display: block
+    margin: auto
+
+.itemDate
+    padding-bottom: 0px
+
+.itemDate h4
 
 
 @media screen and (min-width: 501px)
@@ -772,6 +1069,18 @@ img.card-icon
         margin-top: 42px
         padding: 30px 10px
 
+    // ***** About page *****
+    #aboutPg-section-main
+        margin-top: 42px
+    
+    // ***** Schedule page *****
+    #schedPg-section-main
+        margin-top: 42px
+    
+    .testimonial
+        width: 80%
+        max-width: 1000px
+
 @media screen and (min-width: 761px)
   
     .mobile-header
@@ -779,3 +1088,15 @@ img.card-icon
 
     #classesPg-section-grid
         padding: 40px
+
+    .schedContainer
+        grid-template-columns: minmax(261px, 1fr) 1fr
+        text-align: left
+
+    .itemDate
+        justify-self: end
+        padding-bottom: 30px
+
+    .itemInfo a
+        margin: 0px
+
